--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,33 +1,12 @@
-html, body {
-	max-width: 100%;
-	overflow-x: hidden;
-	overflow-y: hidden;
-    font-family: Raleway;
-}
-
-#navbar {
-	background: #3F51B5;
-	height: 70px;
-	box-shadow: 0px 2px 5px #212121;
-	border-bottom: 1.5px solid #FAFAFA;
-	font-size: +20px;
-	color: #fafafa;
-}
-
-img {
+.navbar-header img {
 	margin-top: 5px;
 	margin-left: 6px;
 	width: 60px;
 	height: 60px;
 }
 
-.row {
-	margin-top: 1px;
-	height: 522px;
-}
-
 #left-puzzle {
-	background: #F5F5F5;
+    background: #E0E0E0;
 	position: relative;
 	height: 100%;
 	border-right: 2px solid #fafafa;
@@ -42,42 +21,8 @@ img {
 #right-code p {
 	font-size: +35px;
 	color: #EEEEEE;
-	margin-top: 80px;
+	margin-top: 35%;
 	margin-bottom: 30px;
-}
-
-#uncode {
-	width: 250px;
-	height: 45px;
-	border-radius: 10px;
-	border: none;
-	margin-bottom: 30px;
-	outline: none;
-	text-align: center;
-	font-size: +30px;
-}
-
-#uncode:active {
-    border: 1px solid black;
-}
-
-#go {
-	background: #f44336;
-	height: 55px;
-	width: 55px;
-	border-radius: 50%;
-	border: 2px solid #b71c1c;
-	font-size: +20px;
-	color: #fafafa;
-	outline: none;
-	transition: 0.5s;
-}
-
-#go:hover {
-	background: #43A047;
-	color: #fafafa;
-	border: 2px solid #1B5E20;
-	transition: 0.5s;
 }
 
 #bottom-footer {
@@ -95,129 +40,73 @@ img {
     font-family: Raleway;
 }
 
-#hero_image {
-	position: absolute;
-	width: 600px;
-	margin-left: 100px;
-	margin-top: 20px;
-	height: 480px;
-	border: 1px solid #bdbdbd;
-	border-radius: 20px;
+#one, #two, #three, #four, #five, #six, #seven, #eight, #nine{
+    background: #212121;
+    height: 30%;
 }
 
-.row1 {
-	width: 600px;
-	height: 160px;
-	margin-left: 100px;
-	margin-top: 20px;
-	position: absolute;
-	border-radius: 20px 20px 0px 0px;
+#adjuster {
+    height: 30%;
 }
 
-.row2 {
-	width: 600px;
-	height: 160px;
-	margin-left: 100px;
-	margin-top: 180px;
-	position: absolute;
+#hero-image {
+    width: 100%;
+    height: 100%;
 }
 
-.row3 {
-	width: 600px;
-	height: 160px;
-	margin-left: 100px;
-	margin-top: 340px;
-	position: absolute;
-	border-radius: 0px 0px 20px 20px;
+#img-container {
+    height: 99%;
 }
 
-#one {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	position: absolute;
+#uncode {
+    width:100%;
+    height: 5%;
+    text-align: center;
+    font-size: +20px;
 }
 
-#two {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	margin-left: 200px;
-	position: absolute;
-}
-
-#three {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	margin-left: 400px;
-	position: absolute;
-}
-
-#four {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	position: absolute;
-}
-
-#five {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	margin-left: 200px;
-	position: absolute;
-}
-
-#six {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	margin-left: 400px;
-	position: absolute;
-}
-
-#seven {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	position: absolute;
-}
-
-#eight {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	margin-left: 200px;
-	position: absolute;
-}
-
-#nine {
-	background: #212121;
-	width: 200px;
-	height: 100%;
-	margin-left: 400px;
-	position: absolute;
-}
-
-#answer_clicker {
-    margin-top: 125px;
-    background: #FF9800;
-    color: #212121;
-    font-size: +22px;
-    padding-left: 30px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-right: 30px;
-    border: 1px solid #C5E1A5;
-    border-radius: 20px;
+#go {
+    background: #3949AB;
+    width: 30%;
+    height: 6%;
+    color: #EEEEEE;
+    border-radius: 10px;
+    border: none;
+    font-size: +20px;
     transition: 0.3s;
     outline: none;
 }
 
-#answer_clicker:hover {
-    background: #A5D6A7;
+#go:hover {
+    background: #4CAF50;
     color: #212121;
-    outline: none;
     transition: 0.3s;
+}
+
+#go:active {
+    background: #009688;
+}
+
+#answer {
+    height: 7%;
+    font-size: +19px;
+    border-radius: 10px;
+    border: none;
+    background: #F4511E;
+    color: #FAFAFA;
+    padding-left: 5%;
+    padding-right: 5%;
+    transition: 0.3s;
+    outline: none;
+}
+
+#answer:hover {
+    background: #FFB300;
+    color: #212121;
+    transition: 0.3s;
+}
+
+#answer:active {
+    background: #f44336;
+    color: #eeeeee;
 }
