--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -43,6 +43,52 @@
 #one, #two, #three, #four, #five, #six, #seven, #eight, #nine{
     background: #212121;
     height: 30%;
+    position: absolute;
+}
+
+#one {
+    margin-left: 10%;
+    margin-top: 4%;
+}
+
+#two {
+    margin-left: 32%;
+    margin-top: 4%;
+}
+
+#three {
+    margin-left: 56%;
+    margin-top: 4%;
+}
+
+#four {
+    margin-left: 10%;
+    margin-top: 23%;
+}
+
+#five {
+    margin-left: 32%;
+    margin-top: 23%;
+}
+
+#six {
+    margin-left: 56%;
+    margin-top: 23%;
+}
+
+#seven {
+    margin-left: 10%;
+    margin-top: 42%;
+}
+
+#eight {
+    margin-left: 32%;
+    margin-top: 42%;
+}
+
+#nine {
+    margin-top: 42%;
+    margin-left: 56%;
 }
 
 #adjuster {
@@ -51,7 +97,9 @@
 
 #hero-image {
     width: 100%;
-    height: 100%;
+    height: 89%;
+    margin-top: 6%;
+    position: absolute;
 }
 
 #img-container {
@@ -109,4 +157,11 @@
 #answer:active {
     background: #f44336;
     color: #eeeeee;
+}
+
+#uncode {
+    height: 6%;
+    border-radius: 10px;
+    border: none;
+    outline: none;
 }
