--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,6 +10,8 @@
 	position: relative;
 	height: 100%;
 	border-right: 2px solid #fafafa;
+    min-width: 70%;
+    min-height: 80%;
 }
 
 #right-code {
@@ -42,53 +44,54 @@
 
 #one, #two, #three, #four, #five, #six, #seven, #eight, #nine{
     background: #212121;
-    height: 30%;
+    width: 250px;
+    height: 200px;
     position: absolute;
 }
 
 #one {
-    margin-left: 10%;
-    margin-top: 4%;
+    margin-left: 100px;
+    margin-top: 20px;
 }
 
 #two {
-    margin-left: 32%;
-    margin-top: 4%;
+    margin-left: 350px;
+    margin-top: 20px;
 }
 
 #three {
-    margin-left: 56%;
-    margin-top: 4%;
+    margin-left: 600px;
+    margin-top: 20px;
 }
 
 #four {
-    margin-left: 10%;
-    margin-top: 23%;
+    margin-left: 100px;
+    margin-top: 220px;
 }
 
 #five {
-    margin-left: 32%;
-    margin-top: 23%;
+    margin-left: 350px;
+    margin-top: 220px;
 }
 
 #six {
-    margin-left: 56%;
-    margin-top: 23%;
+    margin-left: 600px;
+    margin-top: 220px;
 }
 
 #seven {
-    margin-left: 10%;
-    margin-top: 42%;
+    margin-left: 100px;
+    margin-top: 420px;
 }
 
 #eight {
-    margin-left: 32%;
-    margin-top: 42%;
+    margin-left: 350px;
+    margin-top: 420px;
 }
 
 #nine {
-    margin-top: 42%;
-    margin-left: 56%;
+    margin-left: 600px;
+    margin-top: 420px;
 }
 
 #adjuster {
@@ -96,14 +99,16 @@
 }
 
 #hero-image {
-    width: 100%;
-    height: 89%;
-    margin-top: 6%;
+    width: 750px;
+    height: 600px;
+    margin-top: 20px;
     position: absolute;
 }
 
 #img-container {
     height: 99%;
+    position: absolute;
+    margin-left: 100px;
 }
 
 #uncode {
