--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -14,6 +14,11 @@
     min-height: 80%;
 }
 
+@font-face {
+    font-family: "Raleway";
+    src: url("bootstrap/fonts/Raleway.ttf");
+}
+
 #right-code {
 	background: #616161;
 	height: 100%;
