--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: "Raleway";
-    src: url("bootstrap/fonts/Raleway.ttf");
+    src: url("../bootstrap/fonts/Raleway.ttf");
 }
 
 #right-code {
